- doT template JS fix - table wrapper on iOS fix

--- a/src/_assets/firestarter/css/common/_base.scss
+++ b/src/_assets/firestarter/css/common/_base.scss
@@ -83,7 +83,6 @@ table {
     border-spacing: 0;
     font-size: $default-font-size;
     margin-bottom: 20px;
-    max-width: 100%;
     width: 100%;
 
     tr:nth-child(even) {
